fix: rename file and add TOC

--- a/aws_notes.org
+++ b/aws_notes.org
@@ -5,7 +5,178 @@
 
 *IMPORTANT:* Latest update <2024-02-16 Fri>. This notes might be not up to date. Check with AWS Docs.
 
-* Table of Contents :TOC
+* Table of Contents :TOC:
+- [[#compute][Compute]]
+  - [[#ec2][EC2]]
+  - [[#ecr][ECR]]
+  - [[#ecs][ECS]]
+  - [[#eks][EKS]]
+  - [[#fargate][Fargate]]
+  - [[#batch][Batch]]
+  - [[#lambda][Lambda]]
+  - [[#elastic-beanstalk][Elastic Beanstalk]]
+  - [[#lightsail][Lightsail]]
+  - [[#sam-serverless-application-model][SAM (Serverless Application Model)]]
+  - [[#outposts][Outposts]]
+  - [[#wavelength][Wavelength]]
+- [[#storage][Storage]]
+  - [[#ebs-elastic-block-store][EBS (Elastic Block Store)]]
+  - [[#efs-elastic-file-system][EFS (Elastic File System)]]
+  - [[#fsx][FSx]]
+  - [[#s3-simple-storage-services][S3 (Simple Storage Services)]]
+  - [[#transfer-family][Transfer Family]]
+  - [[#storage-gateway][Storage Gateway]]
+- [[#databases][Databases]]
+  - [[#rds-relational-database-service][RDS (Relational Database Service)]]
+  - [[#aurora][Aurora]]
+  - [[#dynamodb][DynamoDB]]
+  - [[#documentdb][DocumentDB]]
+  - [[#elasticache][Elasticache]]
+  - [[#memorydb-for-redis][MemoryDB for Redis]]
+  - [[#keyspaces][Keyspaces]]
+  - [[#neptune][Neptune]]
+  - [[#timestreams][Timestreams]]
+  - [[#qldb-quantum-ledger-db][QLDB (Quantum Ledger DB)]]
+- [[#migrations][Migrations]]
+  - [[#migration-strategies][Migration Strategies]]
+  - [[#migration-hub][Migration Hub]]
+  - [[#application-discovery-service][Application Discovery Service]]
+  - [[#mgn-application-migration-service][MGN (Application Migration Service)]]
+  - [[#sms-server-migration-service-old][SMS (Server Migration Service) (Old)]]
+  - [[#dms-database-migration-service][DMS (Database Migration Service)]]
+  - [[#datasync][DataSync]]
+  - [[#snowball-family][Snowball Family]]
+- [[#networking][Networking]]
+  - [[#public-and-private-services][Public and Private Services]]
+  - [[#vpc-virtual-private-cloud][VPC (Virtual Private Cloud)]]
+  - [[#dx-direct-connect][DX (Direct Connect)]]
+  - [[#dxgw-direct-connect-gateway][DXGW (Direct Connect Gateway)]]
+  - [[#tgw-transit-gateway][TGW (Transit Gateway)]]
+  - [[#global-accelerator][Global Accelerator]]
+  - [[#cloudfront][Cloudfront]]
+  - [[#api-gateway][API Gateway]]
+  - [[#elb-elastic-load-balancing][ELB (Elastic Load Balancing)]]
+  - [[#route-53][Route 53]]
+- [[#security--identity][Security & Identity]]
+  - [[#iam-identity-access-manager][IAM (Identity Access Manager)]]
+  - [[#organizations][Organizations]]
+  - [[#ram-resource-access-manager][RAM (Resource Access Manager)]]
+  - [[#cognito][Cognito]]
+  - [[#kms-key-management-system][KMS (Key Management System)]]
+  - [[#detective][Detective]]
+  - [[#guardduty][GuardDuty]]
+  - [[#inspector][Inspector]]
+  - [[#macie][Macie]]
+  - [[#acm-certificate-manager][ACM (Certificate Manager)]]
+  - [[#cloudhsm][CloudHSM]]
+  - [[#directory-service][Directory Service]]
+  - [[#firewall-manager][Firewall Manager]]
+  - [[#parameter-store][Parameter Store]]
+  - [[#secrets-manager][Secrets Manager]]
+  - [[#security-hub][Security Hub]]
+  - [[#shield][Shield]]
+  - [[#waf-web-application-firewall][WAF (Web Application Firewall)]]
+  - [[#artifact][Artifact]]
+  - [[#audit-manager][Audit Manager]]
+- [[#management][Management]]
+  - [[#managed-grafana][Managed Grafana]]
+  - [[#managed-service-for-prometheus][Managed Service for Prometheus]]
+  - [[#config][Config]]
+  - [[#auto-scaling][Auto Scaling]]
+  - [[#control-tower][Control Tower]]
+  - [[#cloudwatch][CloudWatch]]
+  - [[#cloudtrail][Cloudtrail]]
+  - [[#trusted-advisor][Trusted Advisor]]
+  - [[#system-manager][System Manager]]
+  - [[#tag-editor][Tag Editor]]
+  - [[#licence-manager][Licence Manager]]
+  - [[#billing--cost-management-console][Billing & Cost Management Console]]
+  - [[#compute-optimizer][Compute Optimizer]]
+- [[#analytics][Analytics]]
+  - [[#athena][Athena]]
+  - [[#kinesis][Kinesis]]
+  - [[#cloudsearch][CloudSearch]]
+  - [[#opensearch-before-elasticsearch-es][OpenSearch (before Elasticsearch (ES))]]
+  - [[#emr-elastic-map-reducer][EMR (Elastic Map Reducer)]]
+  - [[#msk][MSK]]
+  - [[#quicksight][Quicksight]]
+  - [[#redshift][Redshift]]
+  - [[#glue][Glue]]
+  - [[#lake-formation][Lake Formation]]
+  - [[#data-pipeline][Data Pipeline]]
+  - [[#data-exchange][Data Exchange]]
+- [[#development--deployment][Development & Deployment]]
+  - [[#types-of-deployments][Types Of Deployments]]
+  - [[#codepipeline][CodePipeline]]
+  - [[#codebuild][CodeBuild]]
+  - [[#codedeploy][CodeDeploy]]
+  - [[#codecommit][CodeCommit]]
+  - [[#cloudformation][CloudFormation]]
+  - [[#opsworks][OpsWorks]]
+  - [[#service-catalog][Service Catalog]]
+  - [[#x-ray][X-Ray]]
+  - [[#app-runner][App Runner]]
+  - [[#cdk][CDK]]
+  - [[#proton][Proton]]
+- [[#application-services][Application Services]]
+  - [[#sns-simple-notification-service][SNS (Simple Notification Service)]]
+  - [[#sqs-simple-queue-service][SQS (Simple Queue Service)]]
+  - [[#ses][SES]]
+  - [[#step-functions][Step Functions]]
+  - [[#swf-simple-workflow-service][SWF (Simple Workflow Service)]]
+  - [[#appsync][AppSync]]
+  - [[#pinpoint][Pinpoint]]
+  - [[#mq][MQ]]
+  - [[#mechanical-turk][Mechanical Turk]]
+  - [[#elemental-medialive][Elemental MediaLive]]
+  - [[#mc-elemental-mediaconvert][MC (Elemental MediaConvert)]]
+  - [[#iot][IoT]]
+  - [[#appflow][AppFlow]]
+  - [[#device-farm][Device Farm]]
+  - [[#amplify][Amplify]]
+- [[#data-protection][Data Protection]]
+  - [[#backup][Backup]]
+  - [[#dlm-data-lifecycle-manager][DLM (Data Lifecycle Manager)]]
+  - [[#snapshots][Snapshots]]
+  - [[#cloudendure-disaster-recovery][Cloudendure Disaster Recovery]]
+  - [[#elastic-disaster-recovery][Elastic Disaster Recovery]]
+- [[#machine-learning--ai][Machine Learning & AI]]
+  - [[#a2i-augmented-ai][A2I (Augmented Ai)]]
+  - [[#lex][Lex]]
+  - [[#comprehend][Comprehend]]
+  - [[#kendra][Kendra]]
+  - [[#poly][Poly]]
+  - [[#bedrock][Bedrock]]
+  - [[#elastic-inference][Elastic Inference]]
+  - [[#rekognition][Rekognition]]
+  - [[#sagemaker][Sagemaker]]
+  - [[#textract][Textract]]
+  - [[#transcribe][Transcribe]]
+  - [[#translate][Translate]]
+  - [[#forecast][Forecast]]
+  - [[#fraud-detector][Fraud Detector]]
+  - [[#personalize][Personalize]]
+- [[#other][Other]]
+  - [[#connect][Connect]]
+  - [[#workspaces][Workspaces]]
+  - [[#appstream-20][AppStream 2.0]]
+- [[#methodologies--aws-concepts][Methodologies & AWS Concepts]]
+  - [[#caf-cloud-adoption-framework][CAF (Cloud Adoption Framework)]]
+  - [[#design-priciples][Design Priciples]]
+  - [[#disaster-recovery-and-business-continuity][Disaster Recovery And Business Continuity]]
+  - [[#global-infrastructure][Global Infrastructure]]
+  - [[#well-architected-framework-pillars][Well-Architected Framework Pillars]]
+  - [[#service-quotas][Service Quotas]]
+- [[#comparison-of-services][Comparison of Services]]
+  - [[#migrations-1][Migrations]]
+  - [[#comparing-instance-store--ebs][Comparing Instance Store & EBS]]
+  - [[#difference-between-nat-instance--nat-gateway-when-handling-timeout][Difference Between NAT Instance & NAT Gateway When Handling Timeout:]]
+- [[#interesting-points][Interesting Points]]
+  - [[#ssl-offloading][SSL Offloading]]
+  - [[#static-ips][Static IPS]]
+  - [[#ddos-mitigation-without-aws-shields][DDoS Mitigation Without AWS Shields]]
+- [[#resources][Resources]]
+
 * Compute
 ** EC2
 Linux, Windows, or Mac based virtual server which sues the Nitro System.
